syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Records in this table override SpiderRock global implied sdiv values in option pricing calculations.
*/    
message UserSDivOverride {
    message PKey {
        
        ExpiryKey ekey = 10; // StocKey + option expiry date
        string client_firm = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    float sdiv_rate = 100;
    float ln_sDiv_rate = 103;
    float sh_sDiv_rate = 106;
    string text = 109; // user detail (if any)
    google.protobuf.Timestamp timestamp = 112;
}


